package pt.ipp.isep.dei.esoft.project.domain;

import java.util.List;

public interface SortingAlgorithm {

    void sort(List<VisitRequest> visitRequestList);


}
